# advent_of_code_22_rust

./: .gitignore  Cargo.toml
.cargo/: config
