[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
aoc-cli = "0.12.0"
itertools = "0.10.5"
regex = "1.7.1"
ndarray = "0.15.6"
closure = "0.3.0"
serde_json = "1.0.93"
hashbrown = "0.13.2"
num = "0.4.0"
impl_ops = "0.1.1"
rayon = "1.6.1"
derive_more = "0.99.17"
